<resources>
    <string name="app_name">SATIP</string>
    <string name="version_current">Version %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vod_page">VOD Page</string>
    <string name="seek_seconds_forward">+%d seconds</string>
    <string name="seek_seconds_backward">-%d seconds</string>
    <string name="episode">Episode</string>
    <string name="filler">Filler \n</string>
    <string name="skip">Skip</string>
    <string name="animations">animations\n\t</string>
    <string name="lorem">"Unlock unlimited entertainment with our SATIP  Subscription! Enjoy access to a vast library of movies across various genres, from timeless classics to the latest blockbusters. With new releases every week, you’ll never run out of exciting options to watch. Whether you're into animated films, gripping thrillers, heartwarming dramas, or action-packed adventures, our app has something for everyone. Subscribe now for a seamless movie-watching experience, ad-free, with the ability to watch anytime, anywhere!</string>
    <string name="support">Want to support the developer of SATIP?</string>
    <string name="donate_goal">Follow Github</string>
    <string name="telegram">https://stc_android</string>
    <string name="github">https://github.com/professorDeveloper</string>
    <string name="show_yt">Show External Player</string>
    <string name="error">Error</string>
    <string name="bio_prompt_info_title">Biometric Authentication</string>
    <string name="user_agent_desc">Change your default user agent</string>
    <string name="user_agent">User Agent</string>
    <string name="enter_password_to_decrypt_file">Enter your password to decrypt the file</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="unknown_file_type">Unknown file type</string>
    <string name="error_importing_settings">Error importing settings</string>
    <string name="download_manager">Download Manager</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="bio_prompt_info_desc">Use your fingerprint or face to unlock the app</string>
    <string name="cancel">Cancel</string>
    <string name="exporting_requires_encryption">Exporting credentials requires a password for encryption</string>
    <string name="ok">Ok</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enable_forgot_password">Enable Forgot Password (hold clear button for 10 seconds)</string>
    <string name="app_lock">App Lock</string>
    <string name="success">Success</string>
    <string name="password_mismatch">Passwords do not match or are empty</string>
    <string name="remove">Remove</string>
    <string name="rating">Rating</string>
    <string-array name="tips">
        <item>You can Long Click an episode/chapter to Mark it as Read.</item>
        <item>Long Clicking Shows can directly open List Editor.</item>
        <item>There are few more easter eggs hidden in the App.</item>
        <item>Challenge: Go to the very bottom of the Popular Anime &amp; Manga</item>
        <item>Try Long Clicking the Show\'s Title.</item>
        <item>Damn, why are you wasting your Time?</item>
        <item>You can Long Click to copy this Message.</item>
        <item>OMG LOOK! YOU FOUND AN EASTER EGG!?</item>
        <item>You know who else likes this Animation?</item>
        <item>MAL support? bruh.</item>
        <item>Novels? more like NO vels.</item>
        <item>Long Click the logo to check for App Update</item>
    </string-array>
    <string name="video">Видео</string>
    <string name="screenshots">Screenshots</string>
    <string name="in_peoples_lists">In Peoples Lists</string>
    <string name="recommendations">Рекомендации</string>

    // Rating
    <string name="num_10">10</string>
    <string name="num_9">9</string>
    <string name="num_8">8</string>
    <string name="num_7">7</string>
    <string name="num_6">6</string>
    <string name="num_5">5</string>
    <string name="num_4">4</string>
    <string name="num_3">3</string>
    <string name="num_2">2</string>
    <string name="num_1">1</string>


    <string name="watching">Watching</string>
    <string name="plan_to_watch">Plan to watch</string>
    <string name="completed">Completed</string>
    <string name="on_hold">On Hold</string>
    <string name="dropped">Dropped</string>
    <string name="ratesScoresStats">% Votes</string>
    <string name="update_sheet">Update Available</string>
    <string name="update_now">Update Now</string>
    <string name="warning_update">Read this before updating</string>
    <string name="warning_update_desc">You can install the new app using the APK file in the *Downloads/IPSAT* folder. Before installation, please remove the existing version !</string>
    <string name="understand">I understand</string>

</resources>